Fix squished image

--- a/components/team_member.module.sass
+++ b/components/team_member.module.sass
@@ -8,7 +8,7 @@
     display: flex
 
     .filler
-      width: 100%
+      flex: 1
 
   $pic_size: 100px
   .pic
